http://bugs.sakaiproject.org/jira/browse/SAK-14439 Updated was to a single default profile
git-svn-id: https://source.sakaiproject.org/svn/was/trunk@52876 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/pom.xml
+++ b/pom.xml
@@ -23,15 +23,12 @@
     <profiles>
         <profile>
             <id>was</id>
+	    <activation>
+              <activeByDefault>true</activeByDefault>
+	    </activation>
             <modules>
 	      <!-- base (../) is a module to leverage profile-defined modules in base pom -->
-	      <module>../</module>
-	      <module>ear</module>
-            </modules>
-        </profile>
-        <profile>
-            <id>was-ear</id>
-            <modules>
+	      <!--<module>../</module>-->
 	      <module>ear</module>
             </modules>
         </profile>
