--- a/ear/pom.xml
+++ b/ear/pom.xml
@@ -23,6 +23,8 @@
         <sakai.version>2.6.0RC1-SNAPSHOT</sakai.version>
         <entitybroker.version>1.3.5-SNAPSHOT</entitybroker.version>
         <poll.version>1.1-SNAPSHOT</poll.version>
+        <emailtemplateservice-tool.version>0.3-SNAPSHOT</emailtemplateservice-tool.version>
+        <sakai-axis2.version>0.1</sakai-axis2.version>
     </properties>
 
    <!-- NOTE: sakai projects are not lockstep versions anymore, it is likely that using a single version will not work much longer,
@@ -58,6 +60,12 @@
          <groupId>org.sakaiproject.entitybroker</groupId>
          <artifactId>direct</artifactId>
          <version>${entitybroker.version}</version>
+         <type>war</type>
+      </dependency>
+      <dependency>
+         <groupId>org.sakaiproject.emailtemplateservice</groupId>
+         <artifactId>emailtemplateservice-tool</artifactId>
+         <version>${emailtemplateservice-tool.version}</version>
          <type>war</type>
       </dependency>
       <dependency>
@@ -151,6 +159,12 @@
          <type>war</type>
       </dependency>
       <dependency>
+         <groupId>org.sakaiproject.entitybroker</groupId>
+         <artifactId>providers</artifactId>
+         <version>${entitybroker.version}</version>
+         <type>war</type>
+      </dependency>
+      <dependency>
          <groupId>org.sakaiproject</groupId>
          <artifactId>sakai-alias-tool</artifactId>
          <version>${sakai.version}</version>
@@ -184,6 +198,12 @@
          <groupId>org.sakaiproject</groupId>
          <artifactId>sakai-axis</artifactId>
          <version>${sakai.version}</version>
+         <type>war</type>
+      </dependency>
+      <dependency>
+         <groupId>org.sakaiproject</groupId>
+         <artifactId>sakai-axis2</artifactId>
+         <version>${sakai-axis2.version}</version>
          <type>war</type>
       </dependency>
       <dependency>
@@ -411,6 +431,12 @@
       <dependency>
          <groupId>org.sakaiproject</groupId>
          <artifactId>sakai-site-manage-group-helper</artifactId>
+         <version>${sakai.version}</version>
+         <type>war</type>
+      </dependency>
+      <dependency>
+         <groupId>org.sakaiproject</groupId>
+         <artifactId>sakai-site-manage-participant-helper</artifactId>
          <version>${sakai.version}</version>
          <type>war</type>
       </dependency>
