--- a/ear/pom.xml
+++ b/ear/pom.xml
@@ -15,12 +15,12 @@
    <parent>
       <artifactId>was</artifactId>
       <groupId>com.ibm</groupId>
-      <version>2.6.0-SNAPSHOT</version>
+      <version>2.7.0-SNAPSHOT</version>
       <relativePath>../pom.xml</relativePath>
    </parent>
 
     <properties>
-        <sakai.version>2.6.0RC1-SNAPSHOT</sakai.version>
+        <sakai.version>2.7.0-SNAPSHOT</sakai.version>
         <entitybroker.version>1.3.5-SNAPSHOT</entitybroker.version>
         <poll.version>1.1-SNAPSHOT</poll.version>
         <emailtemplateservice-tool.version>0.3-SNAPSHOT</emailtemplateservice-tool.version>
