--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
    <parent>
       <artifactId>master</artifactId>
       <groupId>org.sakaiproject</groupId>
-      <version>2.6.0RC1-SNAPSHOT</version>
+      <version>3.0.0-milestone01</version>
       <relativePath>../master/pom.xml</relativePath>
    </parent>
 
