NOJIRA update versions
git-svn-id: https://source.sakaiproject.org/svn/was/branches/sakai-3.0.0-milestone01@56488 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
       <url>http://sakaiproject.org/</url>
    </organization>
    <inceptionYear>2007</inceptionYear>
-   <version>2.6.0-SNAPSHOT</version>
+   <version>3.0.0-milestone01</version>
 
    <!-- Sakai master pom is the parent, not the base -->
    <parent>
