--- a/pom.xml
+++ b/pom.xml
@@ -1,34 +1,52 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0                        http://maven.apache.org/maven-v4_0_0.xsd">
-   <modelVersion>4.0.0</modelVersion>
-   <name>Websphere</name>
-   <groupId>com.ibm</groupId>
-   <artifactId>was</artifactId>
-   <packaging>pom</packaging>
-   <organization>
-      <name>Sakai Project</name>
-      <url>http://sakaiproject.org/</url>
-   </organization>
-   <inceptionYear>2007</inceptionYear>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0                        http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <name>Websphere</name>
+    <groupId>com.ibm</groupId>
+    <artifactId>was</artifactId>
+    <packaging>pom</packaging>
+    <organization>
+        <name>Sakai Project</name>
+        <url>http://sakaiproject.org/</url>
+    </organization>
+    <inceptionYear>2007</inceptionYear>
+    <version>1.1.0</version><!-- this project now has its own version -->
 
-   <!-- Sakai master pom is the parent, not the base -->
-   <parent>
-      <artifactId>master</artifactId>
-      <groupId>org.sakaiproject</groupId>
-      <version>2.7.0-SNAPSHOT</version>
-      <relativePath>../master/pom.xml</relativePath>
-   </parent>
+    <!-- http://bugs.sakaiproject.org/jira/browse/SAK-15828
+        Maven properties guide:
+        http://docs.codehaus.org/display/MAVENUSER/MavenPropertiesGuide -->
+    <properties><!-- (UPDATE WHEN IT CHANGES) -->
+        <was.sakai.version>2.7.0-SNAPSHOT</was.sakai.version><!-- sakai version (UPDATE WHEN IT CHANGES, and the one below) -->
+        <entitybroker.version>1.3.7-SNAPSHOT</entitybroker.version>
+        <poll.version>1.1-SNAPSHOT</poll.version>
+        <emailtemplateservice-tool.version>0.3-SNAPSHOT</emailtemplateservice-tool.version>
+        <sakai-axis2.version>0.1</sakai-axis2.version>
+    </properties>
+
+    <!-- Sakai master pom is the parent, not the base -->
+    <parent>
+        <artifactId>master</artifactId>
+        <groupId>org.sakaiproject</groupId>
+        <version>2.7.0-SNAPSHOT</version><!-- sakai version (UPDATE WHEN IT CHANGES, and the one above) -->
+        <relativePath>../master/pom.xml</relativePath>
+    </parent>
+
+    <!--
+        NOTE: sakai projects are not lockstep versions anymore, it is likely that using a
+        single version will not work much longer, this is too fragile and a better method
+        is needed -AZ
+    -->
+
 
     <profiles>
         <profile>
             <id>was</id>
-	    <activation>
-              <activeByDefault>true</activeByDefault>
-	    </activation>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
             <modules>
-	      <!-- base (../) is a module to leverage profile-defined modules in base pom -->
-	      <!--<module>../</module>-->
-	      <module>ear</module>
+                <module>ear</module>
             </modules>
         </profile>
     </profiles>
