--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
     <parent>
         <artifactId>master</artifactId>
         <groupId>org.sakaiproject</groupId>
-        <version>2.6.0RC1-SNAPSHOT</version><!-- sakai version (UPDATE WHEN IT CHANGES, and the one above) -->
+        <version>2.6.0</version><!-- sakai version (UPDATE WHEN IT CHANGES, and the one above) -->
         <relativePath>../master/pom.xml</relativePath>
     </parent>
 
