--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
         Maven properties guide:
         http://docs.codehaus.org/display/MAVENUSER/MavenPropertiesGuide -->
     <properties><!-- (UPDATE WHEN IT CHANGES) -->
-        <was.sakai.version>2.6.0RC1-SNAPSHOT</was.sakai.version><!-- sakai version (UPDATE WHEN IT CHANGES, and the one below) -->
+        <was.sakai.version>2.6.0</was.sakai.version><!-- sakai version (UPDATE WHEN IT CHANGES, and the one below) -->
         <entitybroker.version>1.3.5-SNAPSHOT</entitybroker.version>
         <poll.version>1.1-SNAPSHOT</poll.version>
         <emailtemplateservice-tool.version>0.3-SNAPSHOT</emailtemplateservice-tool.version>
