SAK-16250 - updated parameter names to generate correct deployment.xml file
git-svn-id: https://source.sakaiproject.org/svn/was/trunk@61748 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/ear/pom.xml
+++ b/ear/pom.xml
@@ -598,8 +598,24 @@
                             </fileMappers>
                             <parameters>
                                 <parameter>
-                                    <name>sakaiVersion</name>
+                                    <name>wasSakaiVersion</name>
                                     <value>${was.sakai.version}</value>
+                                </parameter>
+                                <parameter>
+                                    <name>entitybrokerVersion</name>
+                                    <value>${entitybroker.version}</value>
+                                </parameter>
+                                <parameter>
+                                    <name>pollVersion</name>
+                                    <value>${poll.version}</value>
+                                </parameter>
+                                <parameter>
+                                    <name>emailtemplateservice-toolVersion</name>
+                                    <value>${emailtemplateservice-tool.version}</value>
+                                </parameter>
+                                <parameter>
+                                    <name>sakai-axis2Version</name>
+                                    <value>${sakai-axis2.version}</value>
                                 </parameter>
                             </parameters>
                         </transformationSet>
