Updated sakai-pool-tool group ID
git-svn-id: https://source.sakaiproject.org/svn/was/trunk@61819 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/ear/pom.xml
+++ b/ear/pom.xml
@@ -325,7 +325,7 @@
             <type>war</type>
         </dependency>
         <dependency>
-            <groupId>org.sakaiproject</groupId>
+            <groupId>org.sakaiproject.polls</groupId>
             <artifactId>sakai-poll-tool</artifactId>
             <version>${poll.version}</version>
             <type>war</type>
