SAK-17170 reverse merge back to r67534; was base pom fails to inherit properties from master/pom.xml.
git-svn-id: https://source.sakaiproject.org/svn/was/branches/sakai-2.6.1@67548 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,11 @@
     <!-- http://bugs.sakaiproject.org/jira/browse/SAK-15828
         Maven properties guide:
         http://docs.codehaus.org/display/MAVENUSER/MavenPropertiesGuide -->
-    <properties>
+    <properties><!-- (UPDATE WHEN IT CHANGES) -->
+        <was.sakai.version>2.6-SNAPSHOT</was.sakai.version><!-- sakai version (UPDATE WHEN IT CHANGES, and the one below) -->
+        <entitybroker.version>1.3.6-SNAPSHOT</entitybroker.version>
+        <poll.version>1.1-SNAPSHOT</poll.version>
+        <emailtemplateservice-tool.version>0.3-SNAPSHOT</emailtemplateservice-tool.version>
         <sakai-axis2.version>0.1</sakai-axis2.version>
     </properties>
 
@@ -23,7 +27,7 @@
     <parent>
         <artifactId>master</artifactId>
         <groupId>org.sakaiproject</groupId>
-        <version>2.6.1</version><!-- sakai version (UPDATE WHEN IT CHANGES, and the one above) -->
+        <version>2.6-SNAPSHOT</version><!-- sakai version (UPDATE WHEN IT CHANGES, and the one above) -->
         <relativePath>../master/pom.xml</relativePath>
     </parent>
 
