--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
         <was.sakai.version>2.6.1</was.sakai.version><!-- sakai version (UPDATE WHEN IT CHANGES, and the one below) -->
         <entitybroker.version>1.3.6-SNAPSHOT</entitybroker.version>
         <poll.version>1.1.1</poll.version>
-        <emailtemplateservice-tool.version>0.3-SNAPSHOT</emailtemplateservice-tool.version>
+        <emailtemplateservice-tool.version>0.3.1</emailtemplateservice-tool.version>
         <sakai-axis2.version>0.1</sakai-axis2.version>
     </properties>
 
