--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
         http://docs.codehaus.org/display/MAVENUSER/MavenPropertiesGuide -->
     <properties><!-- (UPDATE WHEN IT CHANGES) -->
         <was.sakai.version>2.6.1</was.sakai.version><!-- sakai version (UPDATE WHEN IT CHANGES, and the one below) -->
-        <entitybroker.version>1.3.6-SNAPSHOT</entitybroker.version>
+        <entitybroker.version>1.3.6.1</entitybroker.version>
         <poll.version>1.1.1</poll.version>
         <emailtemplateservice-tool.version>0.3.1</emailtemplateservice-tool.version>
         <sakai-axis2.version>0.1</sakai-axis2.version>
