--- a/ear/pom.xml
+++ b/ear/pom.xml
@@ -260,9 +260,9 @@
             <type>war</type>
         </dependency>
         <dependency>
-            <groupId>org.sakaiproject</groupId>
-            <artifactId>sakai-jsf-resource</artifactId>
-            <version>2.7.0-SNAPSHOT</version>
+            <groupId>org.sakaiproject.jsf</groupId>
+            <artifactId>jsf-resource</artifactId>
+            <version>${sakai.jsf.version}</version>
             <type>war</type>
         </dependency>
         <dependency>
@@ -494,9 +494,9 @@
             <type>war</type>
         </dependency>
         <dependency>
-            <groupId>org.sakaiproject</groupId>
-            <artifactId>samigo</artifactId>
-            <version>2.7.0-SNAPSHOT</version>
+            <groupId>org.sakaiproject.samigo</groupId>
+            <artifactId>samigo-app</artifactId>
+            <version>${sakai.samigo.version}</version>
             <type>war</type>
         </dependency>
         <dependency>
