--- a/ear/pom.xml
+++ b/ear/pom.xml
@@ -297,7 +297,7 @@
         </dependency>
         <dependency>
             <groupId>org.sakaiproject</groupId>
-            <artifactId>sakai-messageforums-tool</artifactId>
+            <artifactId>messageforums-tool</artifactId>
             <version>2.8-SNAPSHOT</version>
             <type>war</type>
         </dependency>
