--- a/ear/pom.xml
+++ b/ear/pom.xml
@@ -58,7 +58,7 @@
         <dependency>
             <groupId>org.sakaiproject.emailtemplateservice</groupId>
             <artifactId>emailtemplateservice-tool</artifactId>
-            <version>0.4-SNAPSHOT</version>
+            <version>0.4.0</version>
             <type>war</type>
         </dependency>
         <dependency>
@@ -296,7 +296,7 @@
             <type>war</type>
         </dependency>
         <dependency>
-            <groupId>org.sakaiproject</groupId>
+            <groupId>org.sakaiproject.msgcntr</groupId>
             <artifactId>messageforums-tool</artifactId>
             <version>2.8-SNAPSHOT</version>
             <type>war</type>
