--- a/ear/pom.xml
+++ b/ear/pom.xml
@@ -398,8 +398,8 @@
             <type>war</type>
         </dependency>
         <dependency>
-            <groupId>org.sakaiproject</groupId>
-            <artifactId>sakai-scheduler-tool</artifactId>
+            <groupId>org.sakaiproject.scheduler</groupId>
+            <artifactId>scheduler-tool</artifactId>
             <version>2.8-SNAPSHOT</version>
             <type>war</type>
         </dependency>
