--- a/ear/pom.xml
+++ b/ear/pom.xml
@@ -297,12 +297,6 @@
         </dependency>
         <dependency>
             <groupId>org.sakaiproject</groupId>
-            <artifactId>messageforums-tool</artifactId>
-            <version>2.7-SNAPSHOT</version>
-            <type>war</type>
-        </dependency>
-        <dependency>
-            <groupId>org.sakaiproject</groupId>
             <artifactId>sakai-metaobj-tool</artifactId>
             <version>2.7-SNAPSHOT</version>
             <type>war</type>
@@ -405,42 +399,36 @@
         </dependency>
         <dependency>
             <groupId>org.sakaiproject</groupId>
-            <artifactId>sakai-search-tool</artifactId>
-            <version>2.7-SNAPSHOT</version>
-            <type>war</type>
-        </dependency>
-        <dependency>
-            <groupId>org.sakaiproject</groupId>
             <artifactId>sakai-sections-tool</artifactId>
             <version>2.7-SNAPSHOT</version>
             <type>war</type>
         </dependency>
         <dependency>
-            <groupId>org.sakaiproject</groupId>
+            <groupId>org.sakaiproject.sitemanage</groupId>
             <artifactId>sakai-site-manage-tool</artifactId>
             <version>2.7-SNAPSHOT</version>
             <type>war</type>
         </dependency>
         <dependency>
-            <groupId>org.sakaiproject</groupId>
+            <groupId>org.sakaiproject.sitemanage</groupId>
             <artifactId>sakai-site-manage-group-helper</artifactId>
             <version>2.7-SNAPSHOT</version>
             <type>war</type>
         </dependency>
         <dependency>
-            <groupId>org.sakaiproject</groupId>
+            <groupId>org.sakaiproject.sitemanage</groupId>
             <artifactId>sakai-site-manage-participant-helper</artifactId>
             <version>2.7-SNAPSHOT</version>
             <type>war</type>
         </dependency>
         <dependency>
-            <groupId>org.sakaiproject</groupId>
+            <groupId>org.sakaiproject.sitemanage</groupId>
             <artifactId>sakai-site-manage-group-section-role-helper</artifactId>
             <version>2.7-SNAPSHOT</version>
             <type>war</type>
         </dependency>
         <dependency>
-            <groupId>org.sakaiproject</groupId>
+            <groupId>org.sakaiproject.sitemanage</groupId>
             <artifactId>sakai-site-pageorder-helper</artifactId>
             <version>2.7-SNAPSHOT</version>
             <type>war</type>
