--- a/ear/pom.xml
+++ b/ear/pom.xml
@@ -52,13 +52,13 @@
         <dependency>
             <groupId>org.sakaiproject.entitybroker</groupId>
             <artifactId>direct</artifactId>
-            <version>1.3.7-SNAPSHOT</version>
+            <version>1.3.7</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject.emailtemplateservice</groupId>
             <artifactId>emailtemplateservice-tool</artifactId>
-            <version>0.4-SNAPSHOT</version>
+            <version>0.4.0</version>
             <type>war</type>
         </dependency>
         <dependency>
@@ -154,7 +154,7 @@
         <dependency>
             <groupId>org.sakaiproject.entitybroker</groupId>
             <artifactId>providers</artifactId>
-            <version>1.3.7-SNAPSHOT</version>
+            <version>1.3.7</version>
             <type>war</type>
         </dependency>
         <dependency>
@@ -262,7 +262,7 @@
         <dependency>
             <groupId>org.sakaiproject.jsf</groupId>
             <artifactId>jsf-resource</artifactId>
-            <version>${sakai.jsf.version}</version>
+            <version>2.7.0-M1</version>
             <type>war</type>
         </dependency>
         <dependency>
@@ -394,7 +394,7 @@
         <dependency>
             <groupId>org.sakaiproject.scheduler</groupId>
             <artifactId>scheduler-tool</artifactId>
-            <version>2.7-SNAPSHOT</version>
+            <version>2.7.0-b01</version>
             <type>war</type>
         </dependency>
         <dependency>
@@ -484,7 +484,7 @@
         <dependency>
             <groupId>org.sakaiproject.samigo</groupId>
             <artifactId>samigo-app</artifactId>
-            <version>${sakai.samigo.version}</version>
+            <version>2.7.0-SNAPSHOT</version>
             <type>war</type>
         </dependency>
         <dependency>
