--- a/ear/pom.xml
+++ b/ear/pom.xml
@@ -315,7 +315,7 @@
         </dependency>
         <dependency>
             <groupId>org.sakaiproject.polls</groupId>
-            <artifactId>sakai-poll-tool</artifactId>
+            <artifactId>polls-tool</artifactId>
             <version>1.3-SNAPSHOT</version>
             <type>war</type>
         </dependency>
