SAK-17675 prep trunk to accommodate a polls indie release.
git-svn-id: https://source.sakaiproject.org/svn/was/trunk@71346 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/ear/pom.xml
+++ b/ear/pom.xml
@@ -321,7 +321,7 @@
         </dependency>
         <dependency>
             <groupId>org.sakaiproject.polls</groupId>
-            <artifactId>sakai-poll-tool</artifactId>
+            <artifactId>polls-tool</artifactId>
             <version>${sakai.polls.version}</version>
             <type>war</type>
         </dependency>
