--- a/ear/pom.xml
+++ b/ear/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <artifactId>was</artifactId>
         <groupId>com.ibm</groupId>
-        <version>2.6-SNAPSHOT</version>
+        <version>2.6.2</version>
     </parent>
 
     <!--
