--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
         Maven properties guide:
         http://docs.codehaus.org/display/MAVENUSER/MavenPropertiesGuide -->
     <properties><!-- (UPDATE WHEN IT CHANGES) -->
-        <was.sakai.version>2.6-SNAPSHOT</was.sakai.version><!-- sakai version (UPDATE WHEN IT CHANGES, and the one below) -->
+        <was.sakai.version>2.6.2</was.sakai.version><!-- sakai version (UPDATE WHEN IT CHANGES, and the one below) -->
         <entitybroker.version>1.3.6.2-SNAPSHOT</entitybroker.version>
         <poll.version>1.1.2-SNAPSHOT</poll.version>
         <emailtemplateservice-tool.version>0.3.2-SNAPSHOT</emailtemplateservice-tool.version>
@@ -27,7 +27,7 @@
     <parent>
         <artifactId>master</artifactId>
         <groupId>org.sakaiproject</groupId>
-        <version>2.6-SNAPSHOT</version><!-- sakai version (UPDATE WHEN IT CHANGES, and the one above) -->
+        <version>2.6.2</version><!-- sakai version (UPDATE WHEN IT CHANGES, and the one above) -->
         <relativePath>../master/pom.xml</relativePath>
     </parent>
 
