--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,9 @@
         http://docs.codehaus.org/display/MAVENUSER/MavenPropertiesGuide -->
     <properties><!-- (UPDATE WHEN IT CHANGES) -->
         <was.sakai.version>2.6.2</was.sakai.version><!-- sakai version (UPDATE WHEN IT CHANGES, and the one below) -->
-        <entitybroker.version>1.3.6.2-SNAPSHOT</entitybroker.version>
-        <poll.version>1.1.2-SNAPSHOT</poll.version>
-        <emailtemplateservice-tool.version>0.3.2-SNAPSHOT</emailtemplateservice-tool.version>
+        <entitybroker.version>1.3.6.2</entitybroker.version>
+        <poll.version>1.1.2</poll.version>
+        <emailtemplateservice-tool.version>0.3.3</emailtemplateservice-tool.version>
         <sakai-axis2.version>0.1</sakai-axis2.version>
     </properties>
 
