--- a/ear/pom.xml
+++ b/ear/pom.xml
@@ -262,7 +262,7 @@
         <dependency>
             <groupId>org.sakaiproject.jsf</groupId>
             <artifactId>jsf-resource</artifactId>
-            <version>2.7.0-M1</version>
+            <version>2.7.1</version>
             <type>war</type>
         </dependency>
         <dependency>
@@ -316,7 +316,7 @@
         <dependency>
             <groupId>org.sakaiproject.polls</groupId>
             <artifactId>polls-tool</artifactId>
-            <version>1.3-SNAPSHOT</version>
+            <version>1.3.0-b04</version>
             <type>war</type>
         </dependency>
         <dependency>
@@ -388,7 +388,7 @@
         <dependency>
             <groupId>org.sakaiproject.scheduler</groupId>
             <artifactId>scheduler-tool</artifactId>
-            <version>2.7.0-b01</version>
+            <version>2.7.0-rc05</version>
             <type>war</type>
         </dependency>
         <dependency>
