--- a/ear/pom.xml
+++ b/ear/pom.xml
@@ -478,7 +478,7 @@
         <dependency>
             <groupId>org.sakaiproject.samigo</groupId>
             <artifactId>samigo-app</artifactId>
-            <version>2.7.0-SNAPSHOT</version>
+            <version>2.7.0-b01</version>
             <type>war</type>
         </dependency>
         <dependency>
