--- a/ear/pom.xml
+++ b/ear/pom.xml
@@ -74,6 +74,12 @@
             <type>war</type>
         </dependency>
         <dependency>
+            <groupId>org.sakaiproject.msgcntr</groupId>
+            <artifactId>messageforums-tool</artifactId>
+            <version>2.7.0-RC01</version>
+            <type>war</type>
+        </dependency>
+        <dependency>
             <groupId>org.sakaiproject.osp</groupId>
             <artifactId>osp-common-tool</artifactId>
             <version>2.7-SNAPSHOT</version>
@@ -143,6 +149,18 @@
             <groupId>org.sakaiproject</groupId>
             <artifactId>portal</artifactId>
             <version>2.7-SNAPSHOT</version>
+            <type>war</type>
+        </dependency>
+        <dependency>
+            <groupId>org.sakaiproject.profile</groupId>
+            <artifactId>profile-tool</artifactId>
+            <version>2.7.1</version>
+            <type>war</type>
+        </dependency>
+        <dependency>
+            <groupId>org.sakaiproject.profile2</groupId>
+            <artifactId>profile2-tool</artifactId>
+            <version>1.3.6</version>
             <type>war</type>
         </dependency>
         <dependency>
@@ -224,7 +242,7 @@
             <type>war</type>
         </dependency>
         <dependency>
-            <groupId>org.sakaiproject</groupId>
+            <groupId>org.sakaiproject.content</groupId>
             <artifactId>sakai-content-tool</artifactId>
             <version>2.7-SNAPSHOT</version>
             <type>war</type>
@@ -362,21 +380,15 @@
             <type>war</type>
         </dependency>
         <dependency>
-            <groupId>org.sakaiproject</groupId>
-            <artifactId>sakai-sample-tool-jsf</artifactId>
-            <version>2.7-SNAPSHOT</version>
-            <type>war</type>
-        </dependency>
-        <dependency>
-            <groupId>org.sakaiproject</groupId>
-            <artifactId>sakai-sample-tool-servlet</artifactId>
-            <version>2.7-SNAPSHOT</version>
-            <type>war</type>
-        </dependency>
-        <dependency>
             <groupId>org.sakaiproject.scheduler</groupId>
             <artifactId>scheduler-tool</artifactId>
-            <version>2.7.0-rc06</version>
+            <version>2.7.0</version>
+            <type>war</type>
+        </dependency>
+        <dependency>
+            <groupId>org.sakaiproject.search</groupId>
+            <artifactId>sakai-search-tool</artifactId>
+            <version>1.2.3</version>
             <type>war</type>
         </dependency>
         <dependency>
