--- a/ear/pom.xml
+++ b/ear/pom.xml
@@ -58,7 +58,7 @@
         <dependency>
             <groupId>org.sakaiproject.emailtemplateservice</groupId>
             <artifactId>emailtemplateservice-tool</artifactId>
-            <version>0.4.1</version>
+            <version>0.4.3</version>
             <type>war</type>
         </dependency>
         <dependency>
@@ -76,7 +76,7 @@
         <dependency>
             <groupId>org.sakaiproject.msgcntr</groupId>
             <artifactId>messageforums-tool</artifactId>
-            <version>2.7.0-RC01</version>
+            <version>2.7.0-rc04</version>
             <type>war</type>
         </dependency>
         <dependency>
@@ -154,19 +154,19 @@
         <dependency>
             <groupId>org.sakaiproject.profile</groupId>
             <artifactId>profile-tool</artifactId>
-            <version>2.7.1</version>
+            <version>2.7.2</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject.profile2</groupId>
             <artifactId>profile2-tool</artifactId>
-            <version>1.3.6</version>
+            <version>1.3.8</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject.entitybroker</groupId>
             <artifactId>providers</artifactId>
-            <version>1.3.8</version>
+            <version>1.3.13</version>
             <type>war</type>
         </dependency>
         <dependency>
@@ -274,7 +274,7 @@
         <dependency>
             <groupId>org.sakaiproject.jsf</groupId>
             <artifactId>jsf-resource</artifactId>
-            <version>2.7.1</version>
+            <version>2.7.5</version>
             <type>war</type>
         </dependency>
         <dependency>
@@ -328,7 +328,7 @@
         <dependency>
             <groupId>org.sakaiproject.polls</groupId>
             <artifactId>polls-tool</artifactId>
-            <version>1.3.4</version>
+            <version>1.3.6</version>
             <type>war</type>
         </dependency>
         <dependency>
@@ -382,13 +382,13 @@
         <dependency>
             <groupId>org.sakaiproject.scheduler</groupId>
             <artifactId>scheduler-tool</artifactId>
-            <version>2.7.0</version>
+            <version>2.7.3</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject.search</groupId>
             <artifactId>sakai-search-tool</artifactId>
-            <version>1.2.3</version>
+            <version>1.2.5</version>
             <type>war</type>
         </dependency>
         <dependency>
@@ -478,7 +478,7 @@
         <dependency>
             <groupId>org.sakaiproject.samigo</groupId>
             <artifactId>samigo-app</artifactId>
-            <version>2.7.0-b05</version>
+            <version>2.7.0-rc02</version>
             <type>war</type>
         </dependency>
         <dependency>
