--- a/ear/pom.xml
+++ b/ear/pom.xml
@@ -404,6 +404,12 @@
             <type>war</type>
         </dependency>
         <dependency>
+            <groupId>org.sakaiproject</groupId>
+            <artifactId>sakai-siteassociation-tool</artifactId>
+            <version>2.7-SNAPSHOT</version>
+            <type>war</type>
+        </dependency>
+        <dependency>
             <groupId>org.sakaiproject.sitemanage</groupId>
             <artifactId>sakai-site-manage-tool</artifactId>
             <version>2.8-SNAPSHOT</version>
