NOJIRA fix resetpass dep, comment out blogger, reports
git-svn-id: https://source.sakaiproject.org/svn/was/branches/sakai-2.8.x@82861 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/ear/pom.xml
+++ b/ear/pom.xml
@@ -193,12 +193,14 @@
             <version>0.1</version>
             <type>war</type>
         </dependency>
+        <!--
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>sakai-blogger-tool</artifactId>
             <version>2.8-SNAPSHOT</version>
             <type>war</type>
         </dependency>
+        -->
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>sakai-calendar-summary-tool</artifactId>
@@ -343,16 +345,18 @@
             <version>${sakai.profile2.version}</version>
             <type>war</type>
         </dependency>
+        <!--
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>sakai-reports-tool</artifactId>
             <version>2.8-SNAPSHOT</version>
             <type>war</type>
         </dependency>
+        -->
         <dependency>
-            <groupId>org.sakaiproject</groupId>
+            <groupId>org.sakaiproject.reset-pass</groupId>
             <artifactId>sakai-reset-pass</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>${sakai.resetpass.version}</version>
             <type>war</type>
         </dependency>
         <dependency>
