NOJIRA remove blogger and reports tool dependencies, fix reset-pass coordinates.
git-svn-id: https://source.sakaiproject.org/svn/was/trunk@82865 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/ear/pom.xml
+++ b/ear/pom.xml
@@ -195,12 +195,6 @@
         </dependency>
         <dependency>
             <groupId>org.sakaiproject</groupId>
-            <artifactId>sakai-blogger-tool</artifactId>
-            <version>2.9-SNAPSHOT</version>
-            <type>war</type>
-        </dependency>
-        <dependency>
-            <groupId>org.sakaiproject</groupId>
             <artifactId>sakai-calendar-summary-tool</artifactId>
             <version>2.9-SNAPSHOT</version>
             <type>war</type>
@@ -344,15 +338,9 @@
             <type>war</type>
         </dependency>
         <dependency>
-            <groupId>org.sakaiproject</groupId>
-            <artifactId>sakai-reports-tool</artifactId>
-            <version>2.9-SNAPSHOT</version>
-            <type>war</type>
-        </dependency>
-        <dependency>
-            <groupId>org.sakaiproject</groupId>
+            <groupId>org.sakaiproject.reset-pass</groupId>
             <artifactId>sakai-reset-pass</artifactId>
-            <version>2.9-SNAPSHOT</version>
+            <version>${sakai.resetpass.version}</version>
             <type>war</type>
         </dependency>
         <dependency>
