--- a/ear/pom.xml
+++ b/ear/pom.xml
@@ -320,9 +320,9 @@
             <type>war</type>
         </dependency>
         <dependency>
-            <groupId>org.sakaiproject</groupId>
+            <groupId>org.sakaiproject.presence</groupId>
             <artifactId>sakai-presence-tool</artifactId>
-            <version>2.9-SNAPSHOT</version>
+            <version>${sakai.presence.version}</version>
             <type>war</type>
         </dependency>
         <dependency>
