--- a/ear/pom.xml
+++ b/ear/pom.xml
@@ -158,9 +158,9 @@
             <type>war</type>
         </dependency>
         <dependency>
-            <groupId>org.sakaiproject</groupId>
+            <groupId>org.sakaiproject.announcement</groupId>
             <artifactId>sakai-announcement-tool</artifactId>
-            <version>2.9-SNAPSHOT</version>
+            <version>${sakai.announcement.version}</version>
             <type>war</type>
         </dependency>
         <dependency>
