--- a/ear/pom.xml
+++ b/ear/pom.xml
@@ -290,7 +290,7 @@
             <type>war</type>
         </dependency>
         <dependency>
-            <groupId>org.sakaiproject</groupId>
+            <groupId>org.sakaiproject.metaobj</groupId>
             <artifactId>sakai-metaobj-tool</artifactId>
             <version>2.9-SNAPSHOT</version>
             <type>war</type>
