--- a/ear/pom.xml
+++ b/ear/pom.xml
@@ -260,13 +260,13 @@
             <type>war</type>
         </dependency>
         <dependency>
-            <groupId>org.sakaiproject</groupId>
+            <groupId>org.sakaiproject.mailarchive</groupId>
             <artifactId>sakai-mailarchive-james</artifactId>
             <version>2.9-SNAPSHOT</version>
             <type>war</type>
         </dependency>
         <dependency>
-            <groupId>org.sakaiproject</groupId>
+            <groupId>org.sakaiproject.mailarchive</groupId>
             <artifactId>sakai-mailarchive-tool</artifactId>
             <version>2.9-SNAPSHOT</version>
             <type>war</type>
