--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <artifactId>master</artifactId>
         <groupId>org.sakaiproject</groupId>
-        <version>2.8-SNAPSHOT</version><!-- sakai version (UPDATE WHEN IT CHANGES, and the one above) -->
+        <version>2.8.3</version><!-- sakai version (UPDATE WHEN IT CHANGES, and the one above) -->
         <relativePath>../master/pom.xml</relativePath>
     </parent>
 
